# RPGDynamicTranslation

./: DynamicTranslation.js  README.md  install_plugin.py  package-lock.json  package.json  pyproject.toml  test_translation_system.js  zh.json
.github/workflows/: test.yml
tests/: DynamicTranslation.test.js  setup.js  test_install_plugin.py
