[project]
name = "rpg-dynamic-translation"
version = "1.0.0"
description = "Dynamic translation system for RPG Maker MV/MZ"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
